Try It Out button renders highlight border around the app column.

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,13 @@ label {
 
 .js {
   min-height: 500px;
+  &__app {
+    &--highlight {
+      border: .5rem solid rgba($red, .3);
+    }
+  }
 }
+
 
 .stack {
   &__icon {
